--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -32,6 +32,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'stats_page' %}active{% endif %}" href="/stats/">
+                                <i class="fas fa-chart-pie me-1"></i> Stats
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.url_name == 'close_trade' %}active{% endif %}" href="/close-trade/">
                                 <i class="fas fa-times-circle me-1"></i> Open Trades
                             </a>
