--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -67,8 +67,8 @@
                                 <li><a class="dropdown-item" href="/admin/core/" target="_blank">
                                         <i class="fas fa-database me-2"></i> Database Admin
                                     </a></li>
-                                <li><a class="dropdown-item" href="#" onclick="exportSystemData()">
-                                        <i class="fas fa-download me-2"></i> Export Data
+                                <li><a class="dropdown-item" href="#" onclick="openBackupModal()">
+                                        <i class="fas fa-database me-2"></i> Backup DB
                                     </a></li>
                                 <li>
                                     <hr class="dropdown-divider">
